data/derived/sp14/progs/unify/prog1004.ml.out
Characters 513-514:
  if c < 0
         ^
Error: This expression has type int but an expression was expected of type
         expr
